--- a/boeker-1979.qmd
+++ b/boeker-1979.qmd
@@ -22,10 +22,8 @@ DEPARTMENT OF STATE TELEGRAM
 
 ------------------------------------------------------------------------
 
-
-::: {.cable-meta}
+::: cable-meta
 :::
-
 
 ### 1. Summary
 
