metadata block move part 1

--- a/cables/filename_1738525409284.qmd
+++ b/cables/filename_1738525409284.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 jan 1960"
 cable-concepts: "OPIUM, SURVEYS"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
