--- a/cables/filename_1738525411197.qmd
+++ b/cables/filename_1738525411197.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "20 Mar 2014"
 cable-concepts: "DEMOCRACY, POLICIES, TIN, DIPLOMATIC COMMUNICATIONS, ELECTIONS, STOCKPILE DISPOSAL, ACCESS TO PORTS"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
