--- a/cables/filename_1738526853739.qmd
+++ b/cables/filename_1738526853739.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 JAN 1960"
 cable-concepts: "NATURAL GAS, INDUSTRIAL DEVELOPMENT, TREATY SIGNATURE, DEVELOPMENT PROGRAMS, TECHNICAL ASSISTANCE"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
