--- a/cables/filename_1738525425333.qmd
+++ b/cables/filename_1738525425333.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 jan 1960"
 cable-concepts: "PUBLIC DEMONSTRATIONS, ANTIAMERICAN"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
