--- a/cables/filename_1738526026117 Boeker Natusch 3Aug1978.qmd
+++ b/cables/filename_1738526026117 Boeker Natusch 3Aug1978.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 jan 1960"
 cable-concepts: "GOVERNMENT REFORM, REPORTS, NATIONAL ELECTIONS, CAT-B"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
