--- a/cables/filename_1738526836192.qmd
+++ b/cables/filename_1738526836192.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 JAN 1960"
 cable-concepts: "FOREIGN POLICY POSITION, POLITICAL PARTIES, PUBLIC ATTITUDES, MEETINGS, WATERWAY ACCESS"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
