--- a/cables/filename_1738526839191.qmd
+++ b/cables/filename_1738526839191.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 JAN 1960"
 cable-concepts: "LANDLOCKED COUNTRIES, ACCESS TO PORTS"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
