--- a/cables/filename_1738526884048.qmd
+++ b/cables/filename_1738526884048.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 JAN 1960"
 cable-concepts: "n/a"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
