--- a/cables/filename_1738526884171.qmd
+++ b/cables/filename_1738526884171.qmd
@@ -16,7 +16,7 @@ cable-declass-date: "01 JAN 1960"
 cable-concepts: "EXPLORATION, AGREEMENTS, MINING INDUSTRY, MINERALS, GEOLOGIC SURVEYS"
 ---
 
-::: cable-meta
+::: {.cable-meta}
 :::
 
 # DEPARTMENT OF STATE TELEGRAM
